--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,22 +18,38 @@
 
 web:
   build: ./web
+  command: gulp serve
+  ports:
+    - "3000:3000"
+  volumes:
+    - web/:/src/gcm-playground/web/
+  links:
+    - server
+
+
+# ########################################################################
+# # The GCM App server.
+# ########################################################################
+
+server:
+  build: ./server
   command: go run server.go
   ports:
-    - "8080:8080"
+    - "4260:4260"
   volumes:
-    - web/:/go/src/gcm-playground
-  links:
-    - logging
+    - server/:/src/gcm-playground/server/
+#   links:
+#     - logging
 
 
-########################################################################
-# The logging pipeline for the app server.
-########################################################################
+# # ########################################################################
+# # # The logging pipeline for the app server.
+# # # TODO(karangoel): Temporarily disabled.
+# # ########################################################################
 
-logging:
-  image: sebp/elk
-  ports:
-    - "5601:5601"
-    - "9200:9200"
-    - "5000:5000"
+# # logging:
+# #   image: sebp/elk
+# #   ports:
+# #     - "5601:5601"
+# #     - "9200:9200"
+# #     - "5000:5000"
