Revert "[gcm-playground] Added a UI using Polymer"
This reverts commit 52f2cb5a4c394a000681f336e94afb3e33b31dc3.

Change-Id: I43fcf62f5c821b022ef26236414dcef160f755e7

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,38 +18,22 @@
 
 web:
   build: ./web
-  command: gulp serve
-  ports:
-    - "3000:3000"
-  volumes:
-    - web/:/src/gcm-playground/web/
-  links:
-    - server
-
-
-# ########################################################################
-# # The GCM App server.
-# ########################################################################
-
-server:
-  build: ./server
   command: go run server.go
   ports:
-    - "4260:4260"
+    - "8080:8080"
   volumes:
-    - server/:/src/gcm-playground/server/
-#   links:
-#     - logging
+    - web/:/go/src/gcm-playground
+  links:
+    - logging
 
 
-# # ########################################################################
-# # # The logging pipeline for the app server.
-# # # TODO(karangoel): Temporarily disabled.
-# # ########################################################################
+########################################################################
+# The logging pipeline for the app server.
+########################################################################
 
-# # logging:
-# #   image: sebp/elk
-# #   ports:
-# #     - "5601:5601"
-# #     - "9200:9200"
-# #     - "5000:5000"
+logging:
+  image: sebp/elk
+  ports:
+    - "5601:5601"
+    - "9200:9200"
+    - "5000:5000"
