--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ _testmain.go
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -49,3 +50,9 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+web/node_modules
+web/dist
+test/temp
+web/bower_components
+web/.tmp
+test/bower_components/
