Revert "[gcm-playground] Add a Go server to register, unregister"
This reverts commit 929866d5e1f75a2cffd68697be943d03b766e95e.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,15 @@
 # The Web UI that consumes gcm-go and provides a playground.
 ########################################################################
 
-# web:
-#   build: ./web
-#   command: gulp serve
-#   ports:
-#     - "3000:3000"
-#   volumes:
-#     - web/:/src/gcm-playground/web/
-#   links:
-#     - server
+web:
+  build: ./web
+  command: gulp serve
+  ports:
+    - "3000:3000"
+  volumes:
+    - web/:/src/gcm-playground/web/
+  links:
+    - server
 
 
 # ########################################################################
