--- a/web/bower.json
+++ b/web/bower.json
@@ -15,9 +15,9 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "iron-elements": "PolymerElements/iron-elements#1.0.0",
-    "paper-elements": "PolymerElements/paper-elements#1.0.1",
-    "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
+    "iron-elements": "PolymerElements/iron-elements#~1.0.0",
+    "paper-elements": "PolymerElements/paper-elements#~1.0.2",
+    "platinum-elements": "PolymerElements/platinum-elements#~1.0.1",
     "page": "visionmedia/page.js#~1.6.3"
   }
 }
