--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "description": "GCM Playground Receiver",
   "manifest_version": 2,
-  "permissions": [ "gcm", "storage", "http://*/*", "https://*/*" ],
+  "permissions": [
+    "gcm",
+    "storage",
+    "http://*/*",
+    "https://*/*"
+  ],
   "icons": {
     "16": "icon_16.png",
     "32": "icon_32.png",
