Fields validation, Send message server API
This commit:

1. Does client side form validation when sending a message.
2. Bootstraps a fake server API for sending a message

Bug: 22566000
Bug: 22928264
Change-Id: If74668a91c5c8cf7f9a657250f330b8fde1bfaa7

--- a/web/app/settings.json
+++ b/web/app/settings.json
@@ -1,4 +1,7 @@
 {
+  "main": {
+    "sendMessageEndpoint": "http://localhost:4260/message"
+  },
   "notificationFields_": [
     {
       "label": "Title",
