--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,26 @@ hs_err_pid*
 android/.idea/workspace.xml
 android/.idea/libraries
 build
+
+#####=== Swift ===#####
+
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+
+Pods/
