--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-# GCM Playground
-platform :ios, '7.0'
-link_with 'GCM Playground'
-pod 'Google/CloudMessaging'
+target 'GCM Playground' do
+    pod 'Google/CloudMessaging'
+end
