Request preview and livestreaming upstream messages
This commit adds:
1. Web - Tie up parameters and options to live preview
2. Web - Show upstream messages in the UI using websockets
3. Rename some text

Bug: 22663848
Bug: 23425978
Bug: 23599348
Bug: 23682521

Change-Id: Ib0866b19700c3d81750fa7e3d3a640014c12ff0d

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -30,6 +30,7 @@ RUN go get -u github.com/gorilla/mux
 RUN go get -u github.com/jinzhu/gorm
 RUN go get -u github.com/mattn/go-sqlite3
 RUN go get -u github.com/google/go-gcm
+RUN go get -u github.com/googollee/go-socket.io
 RUN go get -u github.com/rs/cors
 
 
