--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,7 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services-gcm:7.5.+'
+    compile 'com.google.android.gms:play-services-gcm:7.8.0'
     compile 'com.android.support:design:22.2.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
 }
