Add more docs, getting started, screenshots
Change-Id: I9e3c58db298b22700947d565b6a64cc9e5dd48a3

--- a/web/app/settings.json
+++ b/web/app/settings.json
@@ -1,6 +1,8 @@
 {
   "main": {
-    "sendMessageEndpoint": "http://localhost:4260/message"
+    "sendMessageEndpoint": "http://localhost:4260/message",
+    "clientsEndpoint": "http://localhost:4260/clients",
+    "socketEndpoint": "http://localhost:4260/"
   },
   "notificationFields_": [
     {
