--- a/web/app/settings.json
+++ b/web/app/settings.json
@@ -1,8 +1,8 @@
 {
   "main": {
-    "sendMessageEndpoint": "http://localhost:4260/message",
-    "clientsEndpoint": "http://localhost:4260/clients",
-    "socketEndpoint": "http://localhost:4260/"
+    "sendMessageEndpoint": "http://192.168.99.100:4260/message",
+    "clientsEndpoint": "http://192.168.99.100:4260/clients",
+    "socketEndpoint": "http://192.168.99.100:4260/"
   },
   "notificationFields_": [
     {
