--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         applicationId "com.google.samples.apps.gcmplayground"
         minSdkVersion 21
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,6 +22,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services-gcm:7.8.0'
-    compile 'com.android.support:design:22.2.0'
+    compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.android.support:design:23.1.0'
 }
