Added upstream messaging & tweaked UI a bit for the Chrome extension.

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "GCM Playground Receiver",
+  "name": "GCM Playground",
   "version": "0.0.1",
-  "description": "GCM Playground Receiver",
+  "description": "GCM Playground",
   "manifest_version": 2,
   "permissions": [
     "gcm",
