Remove nodejs requirement for host machine
Silent failures generated a lot of issues, so I moved the node and npm
stuff to the web containers. The files are now just copied to the web container
instead of being mounted as a volume, which means that some changes are needed
for active development (which requires nodejs on the host machine).
Will update instructions if people ask for it.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ web:
   command: gulp serve
   ports:
     - "3000:3000"
-  volumes:
-    - ./web/:/src/gcm-playground/web/ 
+  #volumes:
+  #  - ./web/:/src/gcm-playground/web/ 
   links:
     - server
 
